<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0C6E99"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textAciertos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/aciertos"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textAciertosCount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="25dp"
            android:text="@string/contadorAciertos"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textFallos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="25dp"
            android:text="@string/fallos"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textFallosCount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/contadorFallos"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0C6E99"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#F2DFB3" />
    
    <fragment 
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

</LinearLayout>
